<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:context=".ProfileActivity"
            >


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/littleMargin"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="@dimen/registrati"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profileSubtitle"
                android:textSize="@dimen/loginTextView" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center"
                android:padding="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="@dimen/loginTitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/registrati"
                android:textStyle="bold"
                android:background="@drawable/text_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nome"
                android:textSize="@dimen/loginTitle"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/registrati"
                android:textStyle="bold"
                android:background="@drawable/text_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cognome"
                android:textSize="@dimen/loginTitle"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/registrati"
                android:textStyle="bold"
                android:background="@drawable/text_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="@dimen/loginTitle"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_line"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/registrati"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>